--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,10 @@ button {
 }
 
 a {color: #f95d9b;}
+
+#like_button_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 30px;
+}
