--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,9 @@ button {
 }
 
 .footer {
-  padding-top: 100px;
+  padding-top: 50px;
   font-size: 20px;
+  font-weight: bold;
 }
 
 a {color: #f95d9b;}
@@ -99,5 +100,5 @@ a {color: #f95d9b;}
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 30px;
+    font-size: 20px;
 }
